--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,6 +127,7 @@ jobs:
       id-token: write
       contents: write
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           path: dist/
@@ -135,7 +136,7 @@ jobs:
 
       - name: Detect version from artifacts
         run: |
-          VERSION=$(ls dist/*.whl | head -1 | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
+          VERSION=$(ls dist/*.whl | head -1 | grep -oP 'mojokernel-\K[0-9]+\.[0-9]+\.[0-9]+(?:\.\w+)?')
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Version: $VERSION"
 
